--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "next": "10.2.2",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "storyblok-js-client": "^4.0.9",
