--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-storyblok-blog",
+  "name": "next-prisimic-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,10 +13,7 @@
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "storyblok-js-client": "^4.0.9",
-    "storyblok-react": "^0.1.2",
-    "storyblok-rich-text-react-renderer": "^2.3.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
